--- a/ball/style.css
+++ b/ball/style.css
@@ -5,14 +5,13 @@
 }
 
 body {
-    background-image: url(lawn.jpg);
+    background-image: url(grass.jpg);
+    background-position: cover;
 }
 
 .wrapper {
-	margin: 0 auto;
+	margin: 200px auto 20px;
     position:relative;
-    top: 200px;
-    left: 0;
     width: 600px;
     height: 300px;
     border: 5px solid black;
@@ -38,4 +37,13 @@ body {
     z-index: 5;
     width: 40px;
     height: 40px;
+}
+
+.text {
+    max-width: 600px;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 24px;
+    color: #fff;
+    text-shadow: 2px 1px 1px #000;
 }
